# Defi-United

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/specs/: evm-wallet-workbench.md
docs/superpowers/: development-workflow.md  project-status.md  roadmap.md
docs/superpowers/plans/: 2026-04-27-evm-wallet-workbench-p3-p4.md  2026-04-27-evm-wallet-workbench-v1.md  2026-04-30-p6-2-hot-contract-analysis.md  (+3 more)
scripts/: run-anvil-check.sh  run-release-readiness.sh
src/: App.test.ts  App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: accounts.rs  diagnostics.rs  lib.rs  main.rs  models.rs  session.rs  storage.rs  transactions.rs  vault.rs
src-tauri/src/commands/: abi_caller.rs  abi_registry.rs  accounts.rs  asset_approvals.rs  config.rs  diagnostics.rs  mod.rs  raw_calldata.rs  token_scanner.rs  token_watchlist.rs  transactions.rs  tx_analysis.rs  vault.rs
src-tauri/src/commands/hot_contract/: aggregate.rs  code.rs  decode.rs  mod.rs  source.rs  tests.rs  types.rs
src-tauri/tests/: abi_registry_commands.rs  account_commands.rs  config_commands.rs  native_transfer.rs  token_watchlist_commands.rs  vault_roundtrip.rs
src-tauri/tests/fixtures/: README.md
src/app/: AppShell.test.tsx  AppShell.tsx  session.ts  store.ts
src/components/: ActivityLog.tsx  ChildAccountsTable.tsx  ConfirmModal.tsx  Dashboard.tsx  DistributeForm.tsx  DonateForm.tsx  RootPanel.tsx  SettingsPanel.tsx  SetupScreen.tsx  SweepForm.tsx  UnlockScreen.tsx
src/lib/: rpc.ts  tauri.ts
src/state/: crypto.ts  store.ts  vault.ts
src/test/: render.tsx
src/wallet/: actions.ts  gas.ts  hd.ts  pLimit.ts  provider.ts
(+69 files in other folders)
