[package]
name = "wallet-workbench"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }

[lib]
name = "wallet_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
