[package]
name = "wallet-workbench"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
bip39 = "2.1"
dirs = "6"
libc = "0.2"
rand = "0.8"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
thiserror = "2"
zeroize = "1"

[lib]
name = "wallet_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
