[package]
name = "wallet-workbench"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
aes-gcm = "0.10"
alloy-primitives = "0.8"
argon2 = "0.5"
base64 = "0.22"
bip39 = { version = "2.1", features = ["rand"] }
coins-bip32 = "0.12"
coins-bip39 = "0.12"
dirs = "6"
ethers = "2"
libc = "0.2"
rand = "0.8"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
zeroize = "1"

[lib]
name = "wallet_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
